Fix poptown bleed bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -521,7 +521,7 @@ p#women-name{
     margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 500px){
     #online-poptown{
         margin-top: 10vh;
         margin-bottom: 10vh;
